Added basic message form

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
 <html>
     <head></head>
     <body>
-        Chat App
+        <h1>Chat App</h1>
+        <form id='chatForm'>
+            <input id='text' name='message' type="text">
+            <input type='submit'>
+        </form>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
