--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
             <input id='text' name='message' type="text">
             <input type='submit'>
         </form>
+        <button id='send-location'>Send Location</button>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
