--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <h1>Chat App</h1>
         <form id='chatForm'>
             <input id='text' name='message' type="text">
-            <input type='submit'>
+            <input type='submit' id='submit'>
         </form>
         <button id='send-location'>Send Location</button>
         <script src="/socket.io/socket.io.js"></script>
